Breaking up project into modules
* core: API and main SDK functionality
* sdk: java11+ module with native HttpClient ApiClient impl and java9 module
* okhttp: OkHttp ApiClient impl

Signed-off-by: Johan Fylling <johan.dev@fylling.se>